[gd_scene format=3 uid="uid://bomaeaawhoivk"]

[ext_resource type="Script" uid="uid://knxlrs6iwfyy" path="res://card.gd" id="1_card"]
[ext_resource type="Texture2D" uid="uid://caldthdxwmjgj" path="res://icon.svg" id="2_rjlel"]
[ext_resource type="AudioStream" path="res://flipcard-sound.mp3" id="3_flip"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.9, 0.9, 0.95, 1)

[sub_resource type="QuadMesh" id="QuadMesh_1"]
size = Vector2(1.3, 1.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0.9, 0.3, 1)

[sub_resource type="QuadMesh" id="QuadMesh_2"]
material = SubResource("StandardMaterial3D_2")
size = Vector2(0.05, 0.05)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
emission_shape = 3
emission_box_extents = Vector3(0.6, 0.6, 0.1)
direction = Vector3(0, 1, 0)
spread = 45.0
initial_velocity_min = 0.5
initial_velocity_max = 1.5
gravity = Vector3(0, -1, 0)
scale_min = 0.5
scale_max = 1.5

[sub_resource type="Shader" id="Shader_1"]
code = "shader_type spatial;
render_mode cull_disabled;

uniform vec4 albedo_color : source_color = vec4(0.95, 0.95, 0.98, 1.0);
uniform float corner_radius = 0.15;
uniform float border_width = 0.02;
uniform vec4 border_color : source_color = vec4(0.3, 0.3, 0.4, 1.0);
uniform float glow_intensity = 0.0;
uniform vec4 glow_color : source_color = vec4(1.0, 0.9, 0.2, 1.0);

void fragment() {
	vec2 uv = UV - 0.5; // Center UVs
	vec2 dist = abs(uv) - (0.5 - corner_radius);

	// Distance to corner
	float corner_dist = length(max(dist, 0.0));

	// Discard pixels outside rounded corner
	if (corner_dist > corner_radius) {
		discard;
	}

	// Calculate border
	vec2 edge_dist = abs(uv);
	float to_edge = max(edge_dist.x, edge_dist.y);
	float border_amount = smoothstep(0.5 - border_width, 0.5, to_edge);

	// Also check corner border
	float corner_border = smoothstep(corner_radius - border_width, corner_radius, corner_dist);
	border_amount = max(border_amount, corner_border);

	vec3 final_color = mix(albedo_color.rgb, border_color.rgb, border_amount);

	// Add glow
	final_color = mix(final_color, glow_color.rgb, glow_intensity);

	ALBEDO = final_color;
	EMISSION = glow_color.rgb * glow_intensity;
	METALLIC = 0.0;
	ROUGHNESS = 0.8;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1"]
render_priority = 0
shader = SubResource("Shader_1")
shader_parameter/albedo_color = Color(0.14906779, 0.13751045, 0.26240277, 1)
shader_parameter/corner_radius = 0.15
shader_parameter/border_width = 0.02
shader_parameter/border_color = Color(0.73142344, 0.61769205, 0.25000477, 1)
shader_parameter/glow_intensity = 0.0
shader_parameter/glow_color = Color(1, 0.9, 0.2, 1)

[node name="Card" type="Control" unique_id=470992462]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_card")

[node name="CardButton" type="Button" parent="." unique_id=477051566]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="." unique_id=1455562944]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer" unique_id=1443525212]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(150, 150)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport" unique_id=263472525]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
environment = SubResource("Environment_1")
projection = 1
size = 2.0

[node name="Card3D" type="Node3D" parent="SubViewportContainer/SubViewport" unique_id=1558959682]
unique_name_in_owner = true

[node name="CardBackground" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Card3D" unique_id=280143048]
unique_name_in_owner = true
mesh = SubResource("QuadMesh_1")
surface_material_override/0 = SubResource("ShaderMaterial_1")

[node name="BackSprite" type="Sprite3D" parent="SubViewportContainer/SubViewport/Card3D" unique_id=111029291]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.001)
visible = false
pixel_size = 0.0015

[node name="FrontSprite" type="Sprite3D" parent="SubViewportContainer/SubViewport/Card3D" unique_id=865340072]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.001)
pixel_size = 0.0015
texture = ExtResource("2_rjlel")

[node name="MatchParticles" type="GPUParticles3D" parent="SubViewportContainer/SubViewport/Card3D" unique_id=1234567890]
unique_name_in_owner = true
emitting = false
amount = 20
lifetime = 1.0
one_shot = true
explosiveness = 0.8
process_material = SubResource("ParticleProcessMaterial_1")
draw_pass_1 = SubResource("QuadMesh_2")

[node name="FlipSound" type="AudioStreamPlayer" parent="." unique_id=1234567891]
unique_name_in_owner = true
stream = ExtResource("3_flip")

[connection signal="pressed" from="CardButton" to="." method="_on_card_button_pressed"]
